fixed spacing b/w desc and button

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -9,6 +9,10 @@
     align-items: center;
 }
 
+.home_desc{
+    margin-bottom: var(--mb-1);
+}
+
 .home_social{
     display: grid;
     grid-template-columns: max-content;
